exampleIptables/iptable-save.txt
# Generated by iptables-save v1.4.8 on Mon Mar  2 13:23:48 2015
*mangle
:PREROUTING ACCEPT [1651136551:1999075911109]
:INPUT ACCEPT [1606555924:1968435594521]
:FORWARD ACCEPT [1438262194:1920724591045]
:OUTPUT ACCEPT [205688113:60041773672]
:POSTROUTING ACCEPT [1646179191:1981317656496]
COMMIT
# Completed on Mon Mar  2 13:23:48 2015
# Generated by iptables-save v1.4.8 on Mon Mar  2 13:23:48 2015
*nat
:PREROUTING ACCEPT [142268687:12248077987]
:POSTROUTING ACCEPT [2397716:490027083]
:OUTPUT ACCEPT [4690731:705137262]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Mar  2 13:23:48 2015
# Generated by iptables-save v1.4.8 on Mon Mar  2 13:23:48 2015
*filter
:INPUT ACCEPT [310244:283396379]
:FORWARD ACCEPT [235389:312082112]
:OUTPUT ACCEPT [1:40]
:fail2ban-ProFTPD - [0:0]
:fail2ban-RoundCube - [0:0]
:fail2ban-SSH - [0:0]
:fail2ban-asterisk-tcp - [0:0]
:fail2ban-asterisk-udp - [0:0]
:fail2ban-dovecot - [0:0]
:fail2ban-exim - [0:0]
:fail2ban-lighttpd-auth - [0:0]
:fail2ban-mysql - [0:0]
:fail2ban-recidive - [0:0]
:fail2ban-sasl - [0:0]
:fail2ban-suhosin - [0:0]
:fail2ban-webmin - [0:0]
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-RoundCube
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-lighttpd-auth
-A INPUT -p tcp -m multiport --dports 110,995,143,993,587,465,4190 -j fail2ban-dovecot
-A INPUT -p tcp -m multiport --dports 5060,5061 -j fail2ban-asterisk-tcp
-A INPUT -p udp -m multiport --dports 5060,5061 -j fail2ban-asterisk-udp
-A INPUT -p tcp -m multiport --dports 10000 -j fail2ban-webmin
-A INPUT -p tcp -m tcp --dport 25 -j fail2ban-sasl
-A INPUT -p tcp -m multiport --dports 25,465,587 -j fail2ban-exim
-A INPUT -p tcp -m tcp --dport 22 -j fail2ban-SSH
-A INPUT -p tcp -j fail2ban-recidive
-A INPUT -p tcp -m tcp --dport 21 -j fail2ban-ProFTPD
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-suhosin
-A INPUT -p udp -m multiport --dports 5060,5061 -j fail2ban-asterisk-udp
-A INPUT -p tcp -m tcp --dport 3306 -j fail2ban-mysql
-A INPUT -p tcp -m tcp --dport 3306 -j fail2ban-mysql
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A INPUT -p igmp -j ACCEPT
-A INPUT -p igmp -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A INPUT -p igmp -j ACCEPT
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o lan -j ACCEPT
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth1 -j ACCEPT
-A OUTPUT -o eth0 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth1 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A fail2ban-ProFTPD -j RETURN
-A fail2ban-RoundCube -j RETURN
-A fail2ban-SSH -j RETURN
-A fail2ban-asterisk-tcp -j RETURN
-A fail2ban-asterisk-udp -j RETURN
-A fail2ban-asterisk-udp -j RETURN
-A fail2ban-dovecot -j RETURN
-A fail2ban-exim -j RETURN
-A fail2ban-lighttpd-auth -j RETURN
-A fail2ban-mysql -j RETURN
-A fail2ban-mysql -j RETURN
-A fail2ban-recidive -j RETURN
-A fail2ban-sasl -j RETURN
-A fail2ban-suhosin -j RETURN
-A fail2ban-webmin -j RETURN
COMMIT
# Completed on Mon Mar  2 13:23:48 2015
