exampleIptables/iptables-save-AA_1.txt
root@gmgt /rtorrent $ cat iptables.txt   SX763
# Generated by iptables-save v1.4.10 on Sat Dec 27 03:04:31 2014
*nat
:PREROUTING ACCEPT [507:40509]
:INPUT ACCEPT [178:11433]
:OUTPUT ACCEPT [699:43949]
:POSTROUTING ACCEPT [699:43949]
:postrouting_rule - [0:0]
:prerouting_lan - [0:0]
:prerouting_rule - [0:0]
:prerouting_wan - [0:0]
:zone_lan_nat - [0:0]
:zone_lan_prerouting - [0:0]
:zone_wan_nat - [0:0]
:zone_wan_prerouting - [0:0]
-A PREROUTING -j prerouting_rule
-A PREROUTING -i br-lan -j zone_lan_prerouting
-A POSTROUTING -s 192.168.1.0/24 -o eth0.2 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -o eth0.2 -j MASQUERADE
-A POSTROUTING -j postrouting_rule
-A POSTROUTING -o br-lan -j zone_lan_nat
-A zone_lan_prerouting -j prerouting_lan
-A zone_wan_nat -j MASQUERADE
-A zone_wan_prerouting -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.16                                                                                                                           8.1.1:22
-A zone_wan_prerouting -p tcp -m tcp --dport 55555 -j DNAT --to-destination 192.                                                                                                                           168.1.1:55555
-A zone_wan_prerouting -p udp -m udp --dport 55555 -j DNAT --to-destination 192.                                                                                                                           168.1.1:55555
-A zone_wan_prerouting -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168                                                                                                                           .1.1:1194
-A zone_wan_prerouting -p tcp -m tcp --dport 121 -j DNAT --to-destination 192.16                                                                                                                           8.1.1:21
-A zone_wan_prerouting -p udp -m udp --dport 121 -j DNAT --to-destination 192.16                                                                                                                           8.1.1:21
-A zone_wan_prerouting -j prerouting_wan
COMMIT
# Completed on Sat Dec 27 03:04:31 2014
# Generated by iptables-save v1.4.10 on Sat Dec 27 03:04:31 2014
*raw
:PREROUTING ACCEPT [2498:187699]
:OUTPUT ACCEPT [2264:490235]
:zone_lan_notrack - [0:0]
:zone_wan_notrack - [0:0]
-A PREROUTING -i br-lan -j zone_lan_notrack
COMMIT
# Completed on Sat Dec 27 03:04:31 2014
# Generated by iptables-save v1.4.10 on Sat Dec 27 03:04:31 2014
*mangle
:PREROUTING ACCEPT [2498:187699]
:INPUT ACCEPT [2169:158623]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2264:490235]
:POSTROUTING ACCEPT [2290:498008]
:zone_wan_MSSFIX - [0:0]
-A FORWARD -j zone_wan_MSSFIX
COMMIT
# Completed on Sat Dec 27 03:04:31 2014
# Generated by iptables-save v1.4.10 on Sat Dec 27 03:04:31 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:forward - [0:0]
:forwarding_lan - [0:0]
:forwarding_rule - [0:0]
:forwarding_wan - [0:0]
:input - [0:0]
:input_lan - [0:0]
:input_rule - [0:0]
:input_wan - [0:0]
:output - [0:0]
:output_rule - [0:0]
:reject - [0:0]
:syn_flood - [0:0]
:zone_lan - [0:0]
:zone_lan_ACCEPT - [0:0]
:zone_lan_DROP - [0:0]
:zone_lan_REJECT - [0:0]
:zone_lan_forward - [0:0]
:zone_wan - [0:0]
:zone_wan_ACCEPT - [0:0]
:zone_wan_DROP - [0:0]
:zone_wan_REJECT - [0:0]
:zone_wan_forward - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn_flood
-A INPUT -j input_rule
-A INPUT -j input
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -i eth0 -o eth0.2 -m conntrack --ctstate NEW -j ACC                                                                                                                           EPT
-A FORWARD -s 10.8.0.0/24 -i tun0 -o eth0.2 -m conntrack --ctstate NEW -j ACCEPT                                                                                                                           
-A FORWARD -s 10.8.0.0/24 -d 192.168.1.0/24 -i tun0 -o br-lan -m conntrack --cts                                                                                                                           tate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j forwarding_rule
-A FORWARD -j forward
-A FORWARD -j reject
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j output_rule
-A OUTPUT -j output
-A forward -i br-lan -j zone_lan_forward
-A input -i br-lan -j zone_lan
-A output -j zone_lan_ACCEPT
-A output -j zone_wan_ACCEPT
-A reject -p tcp -j REJECT --reject-with tcp-reset
-A reject -j REJECT --reject-with icmp-port-unreachable
-A syn_flood -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 25/s                                                                                                                           ec --limit-burst 50 -j RETURN
-A syn_flood -j DROP
-A zone_lan -j input_lan
-A zone_lan -j zone_lan_ACCEPT
-A zone_lan_ACCEPT -o br-lan -j ACCEPT
-A zone_lan_ACCEPT -i br-lan -j ACCEPT
-A zone_lan_DROP -o br-lan -j DROP
-A zone_lan_DROP -i br-lan -j DROP
-A zone_lan_REJECT -o br-lan -j reject
-A zone_lan_REJECT -i br-lan -j reject
-A zone_lan_forward -j zone_wan_ACCEPT
-A zone_lan_forward -j forwarding_lan
-A zone_lan_forward -j zone_lan_REJECT
-A zone_wan -p udp -m udp --dport 68 -j ACCEPT
-A zone_wan -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A zone_wan -d 192.168.1.1/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate DN                                                                                                                           AT -j ACCEPT
-A zone_wan -d 192.168.1.1/32 -p tcp -m tcp --dport 55555 -m conntrack --ctstate                                                                                                                            DNAT -j ACCEPT
-A zone_wan -d 192.168.1.1/32 -p udp -m udp --dport 55555 -m conntrack --ctstate                                                                                                                            DNAT -j ACCEPT
-A zone_wan -d 192.168.1.1/32 -p tcp -m tcp --dport 1194 -m conntrack --ctstate                                                                                                                            DNAT -j ACCEPT
-A zone_wan -d 192.168.1.1/32 -p tcp -m tcp --dport 21 -m conntrack --ctstate DN                                                                                                                           AT -j ACCEPT
-A zone_wan -d 192.168.1.1/32 -p udp -m udp --dport 21 -m conntrack --ctstate DN                                                                                                                           AT -j ACCEPT
-A zone_wan -j input_wan
-A zone_wan -j zone_wan_REJECT
-A zone_wan_forward -j forwarding_wan
-A zone_wan_forward -j zone_wan_REJECT
COMMIT
# Completed on Sat Dec 27 03:04:31 2014
