exampleIptables/iptables-save_11
# Generated by iptables-save v1.4.14 on Sun Mar 29 18:24:16 2015
*nat
:PREROUTING ACCEPT [6:559]
:INPUT ACCEPT [5:475]
:OUTPUT ACCEPT [2:160]
:POSTROUTING ACCEPT [2:160]
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Sun Mar 29 18:24:16 2015
# Generated by iptables-save v1.4.14 on Sun Mar 29 18:24:16 2015
*filter
:INPUT ACCEPT [164:12764]
:FORWARD ACCEPT [1:76]
:OUTPUT ACCEPT [52:5559]
-A INPUT -i virbr3 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr3 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr3 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr3 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i virbr4 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr4 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr4 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr4 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -i virbr3 -o virbr3 -j ACCEPT
-A FORWARD -o virbr3 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr3 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr4 -o virbr4 -j ACCEPT
-A FORWARD -o virbr4 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr4 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 10.0.0.0/24 -i br0 -o eth1 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sun Mar 29 18:24:16 2015
